# WebPost

./: .env.example  .gitignore  AGENTS.md  README.md  design.md  pyproject.toml  requirements.txt
.github/instructions/: general.md
api/: main.py
application/: exceptions.py  http_trace.py  http_trace_emitter.py  http_trace_enricher.py  outcome.py
application/executor/: handler_registry.py  step_executor.py
application/handlers/: assert_handler.py  base.py  browser_handler.py  http_handler.py  log_handler.py  result_handler.py  scrape_handler.py
application/ports/: browser_client.py  http_client.py  idempotency_store.py  logger.py  requests_client.py  run_log_store.py  run_repository.py  run_scheduler.py
application/services/: execution_deps.py  execution_error_builder.py  form_composer.py  idempotency_service.py  redactor.py  request_preparer.py  scenario_input_validator.py  scrape_source_registry.py  scrape_target_registry.py  secret_template_policy.py  template_renderer.py
application/trace_enrichers/: cookie_diff.py  core.py  html_saver.py  html_signals.py
docs/: API.md  HTTP_HEADERS.md  NextAction.md  SCENARIO_COMMAND.md  SECRETS.md  VSCODE_TESTING.md
domain/: exceptions.py  ids.py  run.py  run_log.py  run_record.py  scenario.py  scenario_input_validator.py
domain/steps/: __init__.py  assertion.py  base.py  browser.py  expr.py  http.py  log.py  (+2 more)
scenarios/: fun_navi_reserve.json  fun_navi_reserve.yaml  sample_browser.yaml  simple_test.yaml
scripts/: run_api.py  smoke_run.py  test_api.py  test_scenario.py
tests/: README.md  mock_http_client.py
(+58 files in other folders)
